--- a/ws-frontend/index.html
+++ b/ws-frontend/index.html
@@ -17,22 +17,22 @@
 
     <script>
 
-        const queryString = window.location.search;
-        const urlParams = new URLSearchParams(queryString);
+        //const queryString = window.location.search;
+        //const urlParams = new URLSearchParams(queryString);
 
-        if (!localStorage.getItem('access_token')) {
+        /*if (!localStorage.getItem('access_token')) {
             localStorage.setItem('access_token', urlParams.get('access_token'));
         }
         if (!localStorage.getItem('board')) {
             localStorage.setItem('board', urlParams.get('board'));
-        }
+        }*/
 
-        WS_TOKEN = urlParams.get('access_token');
-        const board = urlParams.get('board');
+        // hårdkodat för test, sätt in i WS_TOKEN i .env
+        const WS_TOKEN = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
+        const board = "65140bbf3923bcbdedc859a9"
 
-        console.log(WS_TOKEN)
-        console.log(board)
-        //WS_TOKEN = process.env.WS_TOKEN
+        //console.log(WS_TOKEN)
+        //console.log(board)
         
         // wss = SSL-krypterad
         // WS_URL = `wss://ws-pastebin-niklas.azurewebsites.net?token=${WS_TOKEN}`
