--- a/ws-frontend/index.html
+++ b/ws-frontend/index.html
@@ -5,15 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Malding WebSocket Board</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
 <body>
-    <input id="in" type="text" placeholder="Paste here">
-    <p id="out">...</p>
-    <p id="err" style="color: red;"></p>
-
+    <div class="container">
+        <div class="notes">
+            <div id="create">
+                <i class="fa-solid fa-plus"></i>
+                <div class="createBox">
+                    <div class="innerCreateBox">
+                        <textarea placeholder="Write Here . . ." id="userInput" maxlength="160"></textarea>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script>
-
+        
         /*if (!localStorage.getItem('access_token')) {
             localStorage.setItem('access_token', urlParams.get('access_token'));
         }
@@ -60,13 +69,14 @@
             console.log('Connection closed');
         };
 
-        document.querySelector('#in').addEventListener('input', (evt) => {
+        /*document.querySelector('#in').addEventListener('input', (evt) => {
             socket.send(JSON.stringify({
                 type: 'paste',
                 text: evt.target.value
             }));
-        });
+        });*/
     </script>
+    <script src="/ws-frontend/app.js"></script>
 </body>
 
 </html>
